Time logging > Removed auto submit of form, added fixed header and horizontal scrollbar

--- a/assets/stylesheets/management.css
+++ b/assets/stylesheets/management.css
@@ -114,11 +114,12 @@ table#project_health_table tr td { vertical-align: middle; border: 1px solid whi
       Time Logging
 ********************************************/
 
-#utilization_per_date .time_logging thead th { height: 30px; padding: 0px 20px; }
-#utilization_per_date .time_logging tr td { text-align: center; }
+#floating_tables_holder .time_logging thead th, #weeks_header_holder .time_logging thead th { 
+  height: 30px; padding: 0px 20px; 
+}
+#floating_tables_holder .time_logging tr td { text-align: center; }
 #utilization_pie_chart_wrapper {width: 50%; margin: 10px auto; }
-/*.time_logging tr:nth-child(odd) { background-color: #F4F4EA; }
-.time_logging tr:nth-child(even) { background-color: #FFF; }*/
+
 
 
 
